cached value profiler: api cleanup
GitOrigin-RevId: 7c1ba283e082f00e2a6e6eee75fd85333f5309a0